🩹 Attach toolbar on top

--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="app-toolbar">
   <mat-toolbar-row>
-    <span>Custom Toolbar</span>
+    <span>Shop</span>
+    <app-menu></app-menu>
   </mat-toolbar-row>
 </mat-toolbar>
