--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,6 +1,10 @@
 <mat-toolbar color="primary" class="app-toolbar">
   <mat-toolbar-row>
+    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="shopping_cart_checkout"></mat-icon>
     <span>Shop</span>
+    <span class="example-spacer">
+    </span>
     <app-menu></app-menu>
   </mat-toolbar-row>
 </mat-toolbar>
+
